@@ -56,37 +56,37 @@ namespace dynamicsJRLJapan {
     /**
        \brief Get position of center of mass in joint local reference frame.
     */
-    virtual const vector3d& localCenterOfMass() const = 0;
+    virtual const vector3d& localCenterOfMass() const;
 
     /**
        \brief Set postion of center of mass in joint reference frame.
     */
-    virtual void localCenterOfMass(const vector3d& inlocalCenterOfMass) = 0;
+    virtual void localCenterOfMass(const vector3d& inlocalCenterOfMass);
 
     /**
        \brief Get Intertia matrix expressed in joint local reference frame.
     */
-    virtual const matrix3d& inertiaMatrix() const = 0;
+    virtual const matrix3d& inertiaMatrix() const;
 
     /**
        \brief Set inertia matrix.
     */
-    virtual void inertiaMatrix(const matrix3d& inInertiaMatrix) = 0;
+    virtual void inertiaMatrix(const matrix3d& inInertiaMatrix);
     
     /**
     \brief Get mass.
      */
-    virtual double mass() const = 0;
+    virtual double mass() const;
 
     /**
     \brief Set mass.
      */
-    virtual void mass(double inMass) = 0;
+    virtual void mass(double inMass);
 
     /**
        \brief Get const pointer to the joint the body is attached to.
     */
-    virtual const CjrlJoint* joint() const = 0 ;
+    virtual const CjrlJoint* joint() const;
     
   };
 };
