@@ -1,5 +1,16 @@
 2009-07-03  Florent Lamiraux  <florent@laas.fr>
 
+	Be stricter in searching for include files.
+	* include/dynamicsJRLJapan/DynamicBody.h: .
+	* src/CMakeLists.txt: remove -I${SOURCE_DIR}/include/dynamicsJRLJapan
+	* src/private/Foot.cpp: .
+	* src/private/Hand.cpp: .
+	* src/private/HumDynMultiBodyPrivate.cpp: .
+	* src/private/HumDynMultiBodyPrivate.h: .
+	* src/public/dynamicsJRLJapan.h: .
+
+2009-07-03  Florent Lamiraux  <florent@laas.fr>
+
 	Add missing file dynamicsGetLine.h.cmake.
 	* src/private/dynamicsGetLine.h.cmake: New.
 
